force-app/main/default/objects/LPCR_Planning__c/LPCR_Planning__c.object-meta.xml
<CustomObject>
    <label>Planning Enfant</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plannings Enfants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>