force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_CongesSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CongesSemaine__c</fullName>
    <formula>CASE( LPCR_TypePlanning__c,
&quot;Planning Classique&quot;, (LPCR_Devis__r.LPCR_CongesJours__c  / LPCR_NombreJoursAccueil__c ) * (365/ LPCR_DureeContratJour__c ),
&quot;Multi-Planning&quot;, (LPCR_Devis__r.LPCR_CongesJours__c  / LPCR_MoyenneJoursSemaine__c ) * (365/ LPCR_DureeContratJour__c ),
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Congés en semaine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>