force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_ContactEnfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContactEnfant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Enfant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Plannings Enfant</relationshipLabel>
    <relationshipName>PlanningsEnfants</relationshipName>
    <type>Lookup</type>
</CustomField>