force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_DureeContratJour__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeContratJour__c</fullName>
    <formula>LPCR_Devis__r.LPCR_DateFin__c -  LPCR_Devis__r.LPCR_DateDebut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée du contrat en jours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>