force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_DureeContratJourdel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeContratJourdel__c</fullName>
    <label>Durée du contrat en jour</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>