force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_IdExterne_Enfant__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Enfant__c</fullName>
    <label>Id Externe Enfant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>