force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_IdExterneDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterneDevis__c</fullName>
    <label>Id Externe Devis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>