force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_Lundi__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Lundi__c</fullName>
    <formula>IF(LPCR_NombrePlanning__c&gt;=1,TECH_SommeLundi__c/LPCR_NombrePlanning__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lundi</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>