force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_MoyenneHeuresSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MoyenneHeuresSemaine__c</fullName>
    <formula>IF(
  ISPICKVAL(LPCR_TypePlanning__c, &quot;Planning Tournant&quot;),
  ((LPCR_NombreHeuresMois__c / 4.348) / 5),
  IF(
    LPCR_NombrePlanning__c = 0,
    0,
    LPCR_NombreJoursAccueil__c / LPCR_NombrePlanning__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moyenne d&apos;heures par semaine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>