force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_MoyenneJoursSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MoyenneJoursSemaine__c</fullName>
    <formula>Case(
  LPCR_TypePlanning__c,
  &quot;Multi-Planning&quot;, IF(LPCR_NombrePlanning__c=0,0,LPCR_NombreJoursAccueil__c / LPCR_NombrePlanning__c) ,
  &quot;Planning Tournant&quot;, (LPCR_NombreHeuresMois__c /4.348/5),
  &quot;Planning Classique&quot;, IF(LPCR_NombrePlanning__c=0,0,LPCR_NombreJoursAccueil__c / LPCR_NombrePlanning__c),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moyenne nombre de jours par semaine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>