force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_NombreHeuresSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreHeuresSemaine__c</fullName>
    <label>Nombre d&#39;heures par semaine</label>
    <summarizedField>LPCR_PlanningPrevisionnel__c.LPCR_NombreHeuresSemaine__c</summarizedField>
    <summaryForeignKey>LPCR_PlanningPrevisionnel__c.LPCR_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>