force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_NombreJoursAccueil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreJoursAccueil__c</fullName>
    <label>Nombre de jours d&#39;accueil</label>
    <summarizedField>LPCR_PlanningPrevisionnel__c.LPCR_JourSemaine__c</summarizedField>
    <summaryForeignKey>LPCR_PlanningPrevisionnel__c.LPCR_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>