force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_NombrePlanning__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombrePlanning__c</fullName>
    <label>Nombre de Planning</label>
    <summaryForeignKey>LPCR_PlanningPrevisionnel__c.LPCR_Planning__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>