force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_NombreSemaineAccueilAn__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreSemaineAccueilAn__c</fullName>
    <formula>52 -  LPCR_CongesSemaine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de semaine d’accueil par an</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>