force-app/main/default/objects/LPCR_Planning__c/fields/LPCR_TypePlanning__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypePlanning__c</fullName>
    <label>Type de Planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning Classique</fullName>
            </value>
            <value>
                <fullName>Multi-Planning</fullName>
            </value>
            <value>
                <fullName>Planning Tournant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>