force-app/main/default/objects/LPCR_Planning__c/fields/TECH_SommeJeudi__c.field-meta.xml
<CustomField>
    <fullName>TECH_SommeJeudi__c</fullName>
    <label>Somme Jeudi</label>
    <summarizedField>LPCR_PlanningPrevisionnel__c.LPCR_Jeudi__c</summarizedField>
    <summaryForeignKey>LPCR_PlanningPrevisionnel__c.LPCR_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>