force-app/main/default/objects/LPCR_Planning__c/fields/TECH_SommeLundi__c.field-meta.xml
<CustomField>
    <fullName>TECH_SommeLundi__c</fullName>
    <label>Somme Lundi</label>
    <summarizedField>LPCR_PlanningPrevisionnel__c.LPCR_Lundi__c</summarizedField>
    <summaryForeignKey>LPCR_PlanningPrevisionnel__c.LPCR_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>