force-app/main/default/objects/LPCR_Planning__c/fields/TECH_SommeMardi__c.field-meta.xml
<CustomField>
    <fullName>TECH_SommeMardi__c</fullName>
    <label>Somme Mardi</label>
    <summarizedField>LPCR_PlanningPrevisionnel__c.LPCR_Mardi__c</summarizedField>
    <summaryForeignKey>LPCR_PlanningPrevisionnel__c.LPCR_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>