force-app/main/default/objects/LPCR_Planning__c/fields/TECH_SommeMercredi__c.field-meta.xml
<CustomField>
    <fullName>TECH_SommeMercredi__c</fullName>
    <label>Somme Mercredi</label>
    <summarizedField>LPCR_PlanningPrevisionnel__c.LPCR_Mercredi__c</summarizedField>
    <summaryForeignKey>LPCR_PlanningPrevisionnel__c.LPCR_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>