force-app/main/default/objects/LPCR_Planning__c/fields/TECH_SommeVendredi__c.field-meta.xml
<CustomField>
    <fullName>TECH_SommeVendredi__c</fullName>
    <label>Somme Vendredi</label>
    <summarizedField>LPCR_PlanningPrevisionnel__c.LPCR_Vendredi__c</summarizedField>
    <summaryForeignKey>LPCR_PlanningPrevisionnel__c.LPCR_Planning__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>